# mcp-database

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  README_zh.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
src/mcp_database/: __init__.py  __main__.py  config.py  connection_manager.py  er_diagram.py  masking.py  schema_diff.py  server.py
src/mcp_database/adapters/: __init__.py  base.py  mongodb.py  mysql.py  postgres.py  sqlite.py
tests/: test_config.py  test_connection_manager.py  test_diagnose.py  test_er_diagram.py  test_explain_query.py  test_health.py  test_masking.py  test_mongodb_adapter.py  test_mysql_adapter.py  test_postgres_adapter.py  test_schema_diff.py  test_server.py  test_sqlite_adapter.py  test_sqlite_adapter_extra.py  test_timeout.py
